--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,6 @@
     <title>Webchat Elipse</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="ucch-elipse-webchat"></div>
   </body>
 </html>
